# Cahd

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac  libtool
data/misc/: Makefile-Template
data/ui/: cahd.glade
docs/: TODO  flowChart.odg  hdl.txt
docs/research/Algorithms/: alogrithms.txt
docs/research/OpenGl/: mistakes.txt
research/C/: compiling.txt
shader/: shader.frag
src/: Makefile  Makefile.am  Makefile.in  cahd  compiler.c  compiler.h  editor.c  editor.h  environment.c  environment.h  gpgpu.h  init.c  logger.c  logger.h  logs.c  logs.h  main.c  manager.c  manager.h  memory.h  placer.h  simulator.c  simulator.h  statusbar.c  uploader.c  uploader.h
src/.deps/: gui_program-main.Po
src/gui/: gui-editor.c  gui-editor.h  gui-logger.c  gui-logger.h  gui-main.c  gui-main.h  gui-manager.c  gui-manager.h
src/gui/.deps/: cahd-gui-main.Po
src/old/: debugger.c  debugger.h  defines.h  elbertProtocol.xml  gpgpu.c  placer.c  protocontroller.c  protocontroller.h  schematizer.c  schematizer.h  statusbar.h
src/shader/: gpgpu.cps  shader.vert
tests/: Makefile.am  main.c
